[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/14px_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/7px_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/title_gap.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/level_selection.gd" type="Script" id=4]
[ext_resource path="res://ui/pre_title_gap.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/crown.png" type="Texture" id=6]

[node name="LevelSelection" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_right = 136.0
margin_bottom = 192.0

[node name="PreTitleGap" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_right = 112.0
margin_bottom = 24.0

[node name="Title" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 28.0
margin_right = 112.0
margin_bottom = 44.0
text = "Levels"

[node name="TitleGap" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 48.0
margin_right = 112.0
margin_bottom = 60.0

[node name="level01" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 112.0
margin_bottom = 76.0
alignment = 1

[node name="Label" parent="VBoxContainer/level01" instance=ExtResource( 2 )]
margin_top = 2.0
margin_right = 96.0
margin_bottom = 10.0
text = "Introduction"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/level01"]
margin_left = 100.0
margin_right = 112.0
margin_bottom = 12.0
texture = ExtResource( 6 )

[node name="level02" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 112.0
margin_bottom = 92.0
alignment = 1

[node name="Label" parent="VBoxContainer/level02" instance=ExtResource( 2 )]
margin_left = 12.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 10.0
text = "Graveyard"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/level02"]
margin_left = 88.0
margin_right = 100.0
margin_bottom = 12.0
texture = ExtResource( 6 )

[node name="level03" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 112.0
margin_bottom = 108.0
alignment = 1

[node name="Label" parent="VBoxContainer/level03" instance=ExtResource( 2 )]
margin_left = 28.0
margin_top = 2.0
margin_right = 68.0
margin_bottom = 10.0
text = "River"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/level03"]
margin_left = 72.0
margin_right = 84.0
margin_bottom = 12.0
texture = ExtResource( 6 )

[node name="level04" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 112.0
margin_bottom = 124.0
alignment = 1

[node name="Label" parent="VBoxContainer/level04" instance=ExtResource( 2 )]
margin_left = 20.0
margin_top = 2.0
margin_right = 76.0
margin_bottom = 10.0
text = "Highway"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/level04"]
margin_left = 80.0
margin_right = 92.0
margin_bottom = 12.0
texture = ExtResource( 6 )

[node name="level05" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 112.0
margin_bottom = 140.0
alignment = 1

[node name="Label" parent="VBoxContainer/level05" instance=ExtResource( 2 )]
margin_left = 24.0
margin_top = 2.0
margin_right = 72.0
margin_bottom = 10.0
text = "Hit Me"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/level05"]
margin_left = 76.0
margin_right = 88.0
margin_bottom = 12.0
texture = ExtResource( 6 )

[node name="TitleGap2" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 144.0
margin_right = 112.0
margin_bottom = 156.0

[node name="BackLabel" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 160.0
margin_right = 112.0
margin_bottom = 168.0
text = "Back"
